# ai-gym-pt

./: .env.example  .gitignore  LICENSE  README.md  data_models.py  example_workout_plan.json  example_workout_plan.toon  main.py  models.py  pyproject.toml  workout_plan.json  workout_plan.toon
jenkins/: Dockerfile  Jenkinsfile  run.sh
